Thu Apr 12 11:25:25 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_icc.GNU:
          Added support for c++0x

Tue Apr 10 20:09:23 UTC 2012  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Dev_Poll_Reactor.cpp (ACE_Dev_Poll_Reactor::resumable_handler):
          Changed this method to return 1 instead of 0.  Thanks to David
          Simmonds <david dot simmonds at iggroup dot com> for providing
          this fix.  This fixes bugid 4015.

          Added David to the ACE hall of fame.

Tue Apr 10 20:10:06 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Install the Inline_Files even with inline=0.  Many of these files
          are still needed, especially *_T.inl.  This resolves bug #4002.

Mon Apr  9 21:57:39 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/Timer_Queue_T.cpp (calculate_timeout): Lock the mutex before
          accessing timer queue elements to calculate the timeout. Thanks to
          Kannan Ramaswamy for this fix.

Sun Apr  8 14:25:23 UTC 2012  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/ace.mpc:

          Move ace_wchar.inl to the header section so that it is always
          installed even when the library is built with inline=0. This is
          required because ace_wchar is always inlined.

Fri Apr  6 11:58:40 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Download.html:
          Added another rpm

Fri Apr  6 10:48:03 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * docs/Download.html:
        * docs/bczar/bczar.html:
        * etc/index.html:
          Updated for next release

Fri Apr 06 09:03:19 CEST 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.1.1 released.

Tue Apr  3 22:49:11 UTC 2012  Steve Huston  <shuston@riverace.com>
